# mojo

./: .gitignore  Collection.json  Collection.schema.json  Justfile
input-data/: earthsigns.txt  once-upon-a-time.txt  sitting-in-the-sun.txt
prep/: LICENSE.txt  README.md  pyproject.toml  tox.ini
prep-old/: pyproject.toml  tox.ini
prep-old/tests/: test_mojo.py  test_parse_blank_line_separated.py
prep/mojo/: cli.py  collection.py  parse_blank_line_separated.py
prep/src/prep/: __about__.py  __init__.py  cli.py  parse_blank_line_separated.py
prep/tests/: __init__.py  test_mojo.py  test_parse_blank_line_separated.py
