[tool.poetry]
name = "mojo"
version = "0.1.0"
description = ""
authors = ["Jonathan E. Magen <yonkeltron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^3.2.0"
typer = "^0.3.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
xenon = "^0.7.3"
pylint = "^2.9.3"
autopep8 = "^1.5.7"
tox = "^3.24.0"
types-python-dateutil = "^0.1.4"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
